# 100gecs

./: .gitignore  LICENSE  README.md  basic_xgboost_test.ipynb  demonstrating_parameter_optimisation.ipynb  gaussian_process_hyperparameter_tuning.py  gec.py  pyproject.toml
cloud/: run_evaluate_gec.sh  wait_and_shutdown.sh
cloud/config/: config.json
cloud/eval/: README.md  evaluate_gec.py  evaluate_optuna1.py  evaluate_optuna2.py  evaluate_rs.py  evaluate_rs.py.cb1dd960fd4218d389a757c9f560b571.tmp
cloud/eval/cloud_io/: load_bank_dataset.py  load_cover_dataset.py  load_dataset.py  load_enzymes_dataset.py  load_house_price_dataset.py  load_income_dataset.py  load_mushroom_dataset.py
cloud/eval/helpers/: load_bank_dataset.py  load_cover_dataset.py  load_dataset.py  load_income_dataset.py  load_mushroom_dataset.py
cloud/eval/io/: load_cover_dataset.py  load_dataset.py
cloud/scripts/: evaluate_gec.py
cloud/scripts/helpers/: load_dataset.py
cloud/terraform/: main.tf  variables.tf
monkeytyping/: run_gecs.py  run_gers.py
notebooks/: demonstrating_parameter_optimisation.ipynb  gaussian_process.ipynb  gec.json  gec_fitting.json
roadmap/: ideas.md  questions.md
sims/: gec_sim.py
src/gecs/: catgec.py  catger.py  catget.py  gec.py  gec.py.d370a5331c3fccb5fb59842f5bc0c539.tmp  gec_base.py  gecar.py  gecat.py  ger.py  lightgec.py  lightger.py
src/gecs100/: gec.py
tests/data/: gec_for_plot_test.json
tests/integration/: conftest.py  test_gec.py  test_plotting.py  test_pred.py  test_serde.py
tests/unit/: conftest.py  test_fixed_parameters.py
(+3 files in other folders)
