[tool.poetry]
name = "gecs"
version = "0.29.0"
authors = ["Leon Luithlen <leontimnaluithlen@gmail.com>"]
description = "LightGBM Classifier with integrated bayesian hyperparameter optimization"
keywords = ["lightgbm", "classification", "machine learning", "hyperparameter optimization", "classifier"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/0xideas/sequifier"
repository = "https://github.com/0xideas/sequifier"
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "3.10.*"
pandas = "1.5.2"
numpy = "1.23.5"
scikit-learn = "1.2.2"
scipy = "1.10.1"
lightgbm = "3.3.5"
matplotlib = "3.7.1"
poetry = "1.3.2"
pytest = "7.2.1"
typer = "0.9.0"
tqdm = "4.65.0"

